# src/modules/gitlab/shared/constants/gitlab-route.constant.ts
@@ -1,0 +1,6 @@
+export const GitlabRouteConstant = {
+    version: '/version',
+    projects: '/projects',
+    repositoryFile: (projectId: number, filePath: string): string =>
+        `/projects/${projectId}/repository/files/${encodeURIComponent(filePath)}`,
+} as const;
